2006-06-15  Enrico Troeger  <enrico@endor>

 * src/utils.c: Fixed a bug at opening files when clicking on compiler
                error messages(thanks Yura Semashko).


2006-06-13  Enrico Troeger  <enrico.troeger@uvena.de>

 * doc/Makefile.am: Renamed target html/index.html in htmldoc, added
                    geany.xsl to EXTRA_DIST.
 * doc/geany.docbook: Removed appendix for keybindings, updated section
                      keybindings to new action identifiers.
 * src/utils.c: Improved and finished switching between files when
                clicking on compiler error messages.
 * src/sciwrappers.c, src/document.c, src/highlighting.c, src/build.c,
   src/keyfile.c, src/prefs.c, src/interface.c, geany.glade,
   src/geany.h:
   Implemented code for setting indicators while compiling.


2006-06-12  Enrico Troeger  <enrico.troeger@uvena.de>

 * THANKS, src/about.c: Added translator credits.
 * src/main.c: Defined N_() again, so command line args are really
               translatable.
 * geany.glade, src/interface.c: Added missing mnemonic to build menu
                                 item.

2006-06-12  Frank Lanitz  <frank@frank.uvena.de>

 * configure.in: Added Belarusian and Russian language support.
				 More Information at po/ChangeLog


2006-06-11  Enrico Troeger  <enrico.troeger@uvena.de>

 * geany.glade, src/interface.c: Added some mnemonics in the file menu.
 * src/highlighting.c: Replaced "/" by G_DIR_SEPARATOR_S.
 * src/utils.c: Fixed an issue, which let the build menu item
                insensitive once a new file w/o template was opened.
 * src/document.c: Fixed a segfault in document_find_by_filename().
 * src/geany.h, src/callbacks.c, src/main.c:
   Improved the handling of GIOChannels(for named pipes), ensure they
   are closed in a proper way.
 * src/document.c: document_open_file() returns the index of the opened
                   file.
 * src/utils.c: Open or switch to files when clicking on compiler error